--- a/PopupWarehouse/LoginWindow.xaml
+++ b/PopupWarehouse/LoginWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PopupWarehouse.MainWindow"
+﻿<Window x:Class="Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Login" Height="350" Width="525">
@@ -21,7 +21,6 @@
             <Button Content="Login" Width="200" Margin="10" Click="LoginClick"/>
         </StackPanel>
 
-        
         <!-- Other Options Link -->
         <TextBlock Grid.Row="2" Text="Other options" 
                    HorizontalAlignment="Center" Margin="10" TextDecorations="Underline" 
